--- a/and-bible/app/src/main/res/values-pl/strings.xml
+++ b/and-bible/app/src/main/res/values-pl/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"I rzekł Bóg: \'Niech stanie się światłość.\' I stała się światłość.\"\nRodzaju 1:3</string>
   <string name="help_text">Naciśnij przycisk MENU aby przejść do menu głównego.\n\nAby przejść do następnego lub poprzedniego rozdziału użyj trackball\'a \nlub przesuń palcem po ekranie.</string>
-  <string name="help_text_long"><b>Nawigacja</b>\nAby przejść do następnego lub poprzedniego rozdziału użyj trackball\'a \nlub przesuń palcem po ekranie odpowiednio w prawo lub lewo. \n\n<b>Menu</b>\nNaciśnij przycisk MENU aby przejść do menu głównego.\nAby pobrać więcej dokumentów naciśnij Menu / Pobierz Dokumenty\n\n<b>Odsłuchiwanie</b>\nAby odsłuchać dany fragment użyj opcji Odsłuchaj\nAby wyłączyć odsłuchiwanie wybierz ponownie opcję Odsłuchaj.\nTa opcja nie jest dostępna dla wszystkich wersji językowych.\n\nDłuższe przyciśnięcie wersetu spowoduje wyświetlenie menu kontekstowego dla wersetów.\nDłuższe przyciśnięcie danego dokumentu spowoduje wyświetlenie menu kontekstowego dla dokumentów. \n\n<b>Wyszukiwanie</b>\nSzukana fraza może zawierać znaki specjalne takich jak *,?, AND, OR, NOT (patrz \"Apache Lucene - Query Parser Syntax\")\n\n<b>Moje notatki</b>\nNotatki mogą być tworzone ya pomocą opcji \"Moje notatki\" w menu kontekstowym wersetu. List istniejących notatek dostępna jest w menu głównym.\n\n<b>Ulubione</b>\nWersety można dodawać do ulubionych używając menu kontekstowego dla wersetów. Zarządzanie Ulubionymi odbywa się z menu głównego. Wersety dodane do ulubionych można grupować używając etykiet. \nDłuższe przyciśniecie danego wersetu w sekcji Ulubione spowoduje wyświetlenie menu kontekstowego.</string>
+  <string name="help_text_long"><b>Nawigacja</b>\nAby przejść do następnego lub poprzedniego rozdziału użyj trackballa \nlub przesuń palcem po ekranie odpowiednio w prawo lub lewo. \n\n<b>Menu</b>\nNaciśnij przycisk MENU aby przejść do menu głównego.\nAby pobrać więcej dokumentów naciśnij Menu / Pobierz Dokumenty\n\n<b>Odsłuchiwanie</b>\nAby odsłuchać dany fragment użyj opcji Odsłuchaj\nAby wyłączyć odsłuchiwanie wybierz ponownie opcję Odsłuchaj.\nTa opcja nie jest dostępna dla wszystkich wersji językowych.\n\nDłuższe przyciśnięcie wersetu spowoduje wyświetlenie menu kontekstowego dla wersetów.\nDłuższe przyciśnięcie danego dokumentu spowoduje wyświetlenie menu kontekstowego dla dokumentów. \n\n<b>Wyszukiwanie</b>\nSzukana fraza może zawierać znaki specjalne takich jak *,?, AND, OR, NOT (patrz \"Apache Lucene - Query Parser Syntax\")\n\n<b>Moje notatki</b>\nNotatki mogą być tworzone za pomocą opcji \"Moje notatki\" w menu kontekstowym wersetu. List istniejących notatek dostępna jest w menu głównym.\n\n<b>Ulubione</b>\nWersety można dodawać do ulubionych używając menu kontekstowego dla wersetów. Zarządzanie Ulubionymi odbywa się z menu głównego. Wersety dodane do ulubionych można grupować używając etykiet. \nDłuższe przyciśniecie danego wersetu w sekcji Ulubione spowoduje wyświetlenie menu kontekstowego.</string>
   <string name="version_text">Wersja %s</string>
   <string name="no_sdcard_error">Proszę włożyć kartę SD i ponownie uruchomić And Bible.</string>
   <!--Main menu-->
@@ -16,6 +16,7 @@
   <string name="speak">Odsłuchaj</string>
   <string name="help">Pomoc</string>
   <string name="verse">Menu wersetu</string>
+  <string name="administration">Zarządzanie</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Wybierz księgę</string>
   <string name="choosePassageChapterName">Wybierz rozdział</string>
@@ -24,7 +25,7 @@
   <string name="deuterocanonical">Deuterokanoniczny</string>
   <!--Search-->
   <string name="search_index">Indeks wyszukiwania</string>
-  <string name="index_creation_required">Aby przeprowadzić wyszukiwanie wymagane jest stworzenie indeksu.\n\nIndeks może zostać pobrany z Internetu lub stworzony lokalnie.\n\nZaleca się pobranie indeksu z sieci.\n\nAby pobrać indeks wymagane jest połaczenie z Internetem.</string>
+  <string name="index_creation_required">Aby przeprowadzić wyszukiwanie wymagane jest stworzenie indeksu.\n\nIndeks może zostać pobrany z Internetu lub stworzony lokalnie.\n\nZaleca się pobranie indeksu z sieci.\n\nAby pobrać indeks wymagane jest połączenie z Internetem.\n</string>
   <string name="indexing_wait_msg">Po zakończeniu indeksowania zostaniesz przeniesiony do ekranu wyszukiwania.</string>
   <string name="index">Spis</string>
   <string name="index_download">Pobierz</string>
@@ -53,6 +54,10 @@
   <string name="prefs_show_verseno_summary">Pokaż numer wersetu</string>
   <string name="prefs_verse_per_line_title">Jeden werset na linię</string>
   <string name="prefs_verse_per_line_summary">Pokaż każdy werset w osobnej linii</string>
+  <string name="prefs_show_bookmarks_title">Pokaż ulubione</string>
+  <string name="prefs_show_bookmarks_summary">Odznacz aby ukryć wszystkie ulubione</string>
+  <string name="prefs_default_bookmark_style_title">Domyślny styl ulubionych</string>
+  <string name="prefs_default_bookmark_style_summary">Kolor zaznaczenia lub ikona</string>
   <string name="prefs_show_mynotes_title">Pokaż ikony notatek</string>
   <string name="prefs_show_mynotes_summary">Wersety z moich notatek oznacz ikoną</string>
   <string name="prefs_show_notes_title">Przypisy i odsyłacze</string>
@@ -89,14 +94,15 @@
   <string name="windowMaximise">Maksymalizuj</string>
   <string name="windowMinimise">Minimalizuj</string>
   <string name="windowSynchronise">Synchronizuj</string>
+  <string name="windowMoveFirst">Przesuń pierwsze</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Brak przypisów dla tego rozdziału</string>
   <string name="no_verse_notes">Brak przypisów dla tego wersetu</string>
   <string name="previous">Poprzedni</string>
   <string name="next">Następny</string>
   <!--Strongs-->
-  <string name="strongs">Słownik Strong</string>
-  <string name="strongs_not_installed">Pobierz hebrajski i grecki słownik Strong</string>
+  <string name="strongs">Słownik Stronga</string>
+  <string name="strongs_not_installed">Pobierz hebrajski i grecki słownik Stronga</string>
   <string name="all_greek_occurrences">Pokaż wszystkie</string>
   <string name="all_hebrew_occurrences">Pokaż wszystkie</string>
   <string name="no_indexed_bible_with_strongs_ref">Należy pobrać Biblię zawierającą numery Stronga i następnie pobierać ich spis przez \"Szukaj\"</string>
@@ -105,7 +111,7 @@
   <string name="strongs_toggle_button_off">włączony</string>
   <!--Module download-->
   <string name="download">Pobierz moduł</string>
-  <string name="download_confirmation">Pobierz moduł z Internetu?</string>
+  <string name="download_confirmation">Pobrać moduł z Internetu?</string>
   <string name="download_source_message">Moduł zostanie pobrany z\nhttp://www.crosswire.org\ni http://ibt.org.ru\ni http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Pobieranie</string>
   <string name="download_refreshing_book_list">Odśwież listę dostępnych dokumentów</string>
@@ -119,14 +125,20 @@
   <string name="too_many_jobs">Zbyt dużo zadań wykonywanych jednocześnie. Proszę czekać na ich ukończenie.</string>
   <string name="document_not_installed">Proszę pobrać \'%s\'</string>
   <!--Install zip file-->
+  <string name="install_zip">Załaduj dokument z pliku zip</string>
+  <string name="install_zip_successfull">Moduł został pomyślnie zainstalowany</string>
+  <string name="extracting_zip_file">Rozpakowywanie pliku zip...</string>
+  <string name="checking_zip_file">Sprawdzanie pliku...</string>
+  <string name="invalid_module">Plik nie zawiera poprawnego modułu SWORD</string>
+  <string name="module_already_installed">Plik zawiera moduł, który już został zainstalowany</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Plan czytania</string>
   <string name="rdg_plan_selector_title">Wybierz plan czytania</string>
   <string name="rdg_plan_day">Dzień %s</string>
-  <string name="rdg_plan_set_start_jan1">Start 1 styczeń</string>
+  <string name="rdg_plan_set_start_jan1">Start 1 stycznia</string>
   <string name="done">Gotowe</string>
   <string name="reset">Reset</string>
-  <string name="rdg_plan_y1ntpspr">Nowy Testamen, Psalmy i Księga Przysłów w rok</string>
+  <string name="rdg_plan_y1ntpspr">Nowy Testament, Psalmy i Księga Przysłów w rok</string>
   <string name="rdg_plan_y1ot1nt1_chronological">Przeczytaj Biblię w rok - chronologicznie</string>
   <string name="rdg_plan_y1ot1nt1_OTandNT">Przeczytaj Biblię w ciągu roku - ST i NT</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Przeczytaj Biblię w ciągu roku - najpierw ST potem NT</string>
@@ -148,14 +160,18 @@
   <!--Bookmarks-->
   <string name="bookmarks">Ulubione</string>
   <string name="add_bookmark">Dodaj do ulubionych</string>
+  <string name="delete_bookmark">Usuń z ulubionych</string>
   <string name="bookmark_added">Dodano do ulubionych</string>
   <string name="bookmark_exists">Pozycja już istnieje w ulubionych</string>
+  <string name="bookmark_deleted">Usunięto z ulubionych</string>
   <string name="bookmark_labels">Etykiety</string>
+  <string name="manage_labels">Zarządzaj etykietami ulubionych</string>
   <string name="assign_labels">Przypisz etykiety</string>
   <string name="new_label">Nowa etykieta</string>
   <string name="label_name_prompt">Nazwa</string>
   <string name="label_unlabelled">Nieoznaczony</string>
   <string name="rename">Zmień nazwę</string>
+  <string name="style">Styl</string>
   <!--Sort orders used for Bookmarks and MyNotes-->
   <string name="sort_by_date">Porządek chronologiczny</string>
   <string name="sort_by_bible_book">Porządek biblijny</string>
@@ -201,6 +217,7 @@
   <string name="restore_confirmation">Czy chcesz nadpisać swoje notatki i zakładki?</string>
   <string name="restore_success">Przywróć moje notatki i zakładki zapisane w %s na karcie SD</string>
   <!--About-->
+  <string name="about_copyright">Prawa autorskie: %s</string>
   <string name="about_version">Wersja: %s</string>
   <string name="about_versification">Wersyfikacja: %s</string>
   <!--Document types-->
@@ -223,10 +240,12 @@
   <string name="retry">Ponów próbę</string>
   <string name="please_wait">Proszę czekać...</string>
   <string name="all">Wszystkie</string>
-  <string name="default_value">Domyślny język</string>
+  <string name="default_value">Domyślny</string>
   <string name="new_item">Nowy</string>
   <string name="close">Zamknij</string>
+  <string name="edit">Edytuj</string>
   <!--Errors-->
+  <string name="report_error">Wyślij raport</string>
   <string name="error_occurred">Wystąpił błąd</string>
   <string name="error_no_content">Brak zawartości dla wybranego wiersza</string>
   <string name="error_page_too_large">Strona jest za duża i nie zostanie wczytana</string>
