--- a/and-bible/app/src/main/res/values-hu/strings.xml
+++ b/and-bible/app/src/main/res/values-hu/strings.xml
@@ -154,9 +154,9 @@
   <string name="delete_search_index_doc">Törlöd %s indexét?</string>
   <!--Verse context menu-->
   <string name="notes">Lábjegyzetek és hivatkozások</string>
-  <string name="copy">Másolása</string>
-  <string name="share_verse">Megosztása …</string>
-  <string name="share_verse_subject">A Biblia egy versét megosztották veled az And Bible programon keresztül</string>
+  <string name="copy">Másolás</string>
+  <string name="share_verse">Megosztás…</string>
+  <string name="share_verse_subject">Megosztottak veled egy bibliaverset az And Bible programmal</string>
   <string name="compare_translations">Fordítások összehasonlítása</string>
   <!--Bookmarks-->
   <string name="bookmarks">Könyvjelzők</string>
