--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -117,6 +117,9 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
     <string name="prefs_speak_speed_title">Speak speed</string>
     <string name="prefs_speak_speed_summary">Speak slower or faster</string>
+    <string name="speak_speed_slow">Slow</string>
+    <string name="speak_speed_normal">Normal</string>
+    <string name="speak_speed_fast">Fast</string>
 
     <!-- Window -->
     <string name="window">Window</string>
